--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "embla-carousel-react": "^8.4.0",
     "highlight.js": "^11.10.0",
     "lucide-react": "^0.435.0",
-    "next": "14.2.6",
-    "next-intl": "^3.17.6",
+    "next": "^15.0.3",
+    "next-intl": "^3.25.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
